smoothed out beginning animation one last time and fixed an overflow bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,12 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
+  width: auto;
   background-color: rgba(255, 253, 243, 0.95);
   color: #000000;
+}
+
+body {
   overflow-x: hidden;
 }
 
@@ -81,16 +85,22 @@ body {
 .content {
   /* background-color: #f8f8f8; */
   min-height: 100vh; /* Ensure enough space to scroll */
+  margin-top: -100vh;
 }
 
 .hero-wrapper {
+  position: relative;
   height: 100vh;
+  width: auto;
+  overflow: hidden;
 }
 
 .hero-banner {
   /* Sizing */
   width: 100%;
-  height: 100%;
+  height: auto;
+  position: absolute;
+  transform-origin: top center;
 
   /* Flexbox stuff */
   display: -webkit-box;
@@ -875,10 +885,12 @@ body {
 
   .met-wrapper {
     height: 720px;
+    overflow: hidden;
   }
 
   .met-border {
     height: 50%;
+    /* max-width: 100%; */
   }
 
   .met-title {
